--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,34 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.toptrafficlight{
+    margin: auto;
+    background-color: black;
+    width: 35px;
+    height: 160px;
+}
+.trafficbase{
+    margin: auto;
+    background-color: black;
+    width: 150px;
+    height: 400px;
+    border-radius: 15px;
+    flex-direction: column;
+    padding-top: 20px;
+}
+.light{
+  
+    margin: auto;
+    width: 115px;
+    height: 120px;
+    border-radius: 500px;
+    &.red {background-color: red;}
+    &.yellow {background-color: orange;}
+    &.green {background-color: green;}
+    &.shadowlight {box-shadow: 5px 10px 25px 35px yellow;}
+}
+.new{
+    position: absolute;
+    top: 50px;
+    right: 320px;
+}
